--- a/Açougue Dimas/assets/css/base.css
+++ b/Açougue Dimas/assets/css/base.css
@@ -1,7 +1,7 @@
 :root {
-    --cor-primaria: #0b448a;
+    --cor-primaria: #0071ea;
     --cor-secundaria: #518ad0;
-    --cor-base: #152bb1;
+    --cor-base: #0a155d;
     --cor-contraste-escuro: #000;
     --cor-contraste-claro: #fff;
     --cor-sucesso: #047900;
