--- a/Açougue Dimas/assets/css/style.css
+++ b/Açougue Dimas/assets/css/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: red;
     font-family: 'Montserrat', sans-serif;
+    background: rgb(11,68,138);
+    background: linear-gradient(45deg, rgba(11,68,138,1) 0%, rgba(81,138,208,1) 100%);
 }
 
 main {
@@ -27,10 +29,14 @@ ol {
     flex-direction: column;
     justify-content: flex-end;
     box-sizing: border-box;
+    color: var(--cor-base);
 }
 
 .input {
-    background-color: transparent;
+    opacity: .5;
+    color: var(--cor-base);
+    background-color: var(--cor-secundaria);
+    font-weight: bolder;
     box-sizing: border-box;
     border: none;
     border-radius: 10px;
@@ -45,6 +51,7 @@ ol {
     left: .5rem;
     font-size: 1rem;
     transition: all .25s;
+    font-weight: bold;
 }
 
 .input::placeholder {
