--- a/Açougue Dimas/assets/css/style.css
+++ b/Açougue Dimas/assets/css/style.css
@@ -5,6 +5,16 @@ body {
     background: linear-gradient(45deg, rgba(11,68,138,1) 0%, rgba(81,138,208,1) 100%);
 }
 
+body::-webkit-scrollbar{
+    width: 11px;
+    border: 1px solid rgb(200, 200, 200);
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color: rgb(0, 95, 248);
+    border-radius: 5px;
+}
+
 .container-inicializacao {
     height: 85vh;
     display: flex;
