--- a/Açougue Dimas/assets/css/base.css
+++ b/Açougue Dimas/assets/css/base.css
@@ -14,3 +14,20 @@ input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+body {
+    background-color: red;
+    font-family: 'Montserrat', sans-serif;
+    background: rgb(11,68,138);
+    background: linear-gradient(45deg, rgba(11,68,138,1) 0%, rgba(81,138,208,1) 100%);
+}
+
+body::-webkit-scrollbar{
+    width: 11px;
+    border: 1px solid rgb(200, 200, 200);
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color: rgb(0, 95, 248);
+    border-radius: 5px;
+}
