--- a/Açougue Dimas/assets/css/style.css
+++ b/Açougue Dimas/assets/css/style.css
@@ -1,20 +1,3 @@
-body {
-    background-color: red;
-    font-family: 'Montserrat', sans-serif;
-    background: rgb(11,68,138);
-    background: linear-gradient(45deg, rgba(11,68,138,1) 0%, rgba(81,138,208,1) 100%);
-}
-
-body::-webkit-scrollbar{
-    width: 11px;
-    border: 1px solid rgb(200, 200, 200);
-}
-
-body::-webkit-scrollbar-thumb{
-    background-color: rgb(0, 95, 248);
-    border-radius: 5px;
-}
-
 .container-inicializacao {
     height: 85vh;
     display: flex;
@@ -26,7 +9,11 @@ ol {
     height: 10%;
 }
 
-.instrucao {
+.inativo {
+    display: none;
+}
+
+.lista__instrucao {
     margin: 1em;
     color: var(--cor-contraste-claro);
 }
